autoware_mini_awsim.launch.xml -RTC経由の連携を直した avoidance.param.yaml -unknownのみ障害物回避対象に変更 behavior_velocity_planner.param.yaml -パラメータ変更(ドキュメント指定値だと動かなかったので、暫定値を入れている)

--- a/docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/avoidance/avoidance.param.yaml
+++ b/docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/avoidance/avoidance.param.yaml
@@ -26,11 +26,11 @@
 
       # avoidance is performed for the object type with true
       target_object:
-        car: true
-        truck: true
-        bus: true
-        trailer: true
-        unknown: false
+        car: false
+        truck: false
+        bus: false
+        trailer: false
+        unknown: true
         bicycle: false
         motorcycle: false
         pedestrian: false
