--- a/docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/behavior_velocity_planner.param.yaml
+++ b/docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/behavior_velocity_planner.param.yaml
@@ -14,17 +14,17 @@
     # launch_speed_bump: false
 
     # Autoware-Mini (Uncomment the lines below to try Autoware-Mini)
-    launch_stop_line: true
-    launch_crosswalk:             true #TODO ドキュメント指定値はfalse
-    launch_traffic_light:         true #TODO ドキュメント指定値はfalse
-    launch_intersection:          true #TODO ドキュメント指定値はfalse
-    launch_blind_spot:            true #TODO ドキュメント指定値はfalse
-    launch_detection_area:        true #TODO ドキュメント指定値はfalse
-    launch_virtual_traffic_light: true #TODO ドキュメント指定値はfalse
-    launch_occlusion_spot: false
-    launch_no_stopping_area:      true      #TODO ドキュメント指定値はfalse
-    launch_run_out: false
-    launch_speed_bump: false
+    launch_stop_line:              true
+    launch_crosswalk:             false
+    launch_traffic_light:         false
+    launch_intersection:          false
+    launch_blind_spot:            false
+    launch_detection_area:        false
+    launch_virtual_traffic_light: false
+    launch_occlusion_spot:        false
+    launch_no_stopping_area:      false
+    launch_run_out:               false
+    launch_speed_bump:            false
 
     forward_path_length: 1000.0
     backward_path_length: 5.0
